add Lab9-2Activity  - SharedPreferences 관련 실습 코드 추가

--- a/kkangPart3/part3-9/src/main/AndroidManifest.xml
+++ b/kkangPart3/part3-9/src/main/AndroidManifest.xml
@@ -19,7 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadFileActivity"></activity>
+        <activity android:name=".ReadFileActivity" />
+        <activity android:name=".Lab9_2Activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
