--- a/kkangPart3/app/src/main/AndroidManifest.xml
+++ b/kkangPart3/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".ReadDBActivity" />
+        <activity android:name=".Lab8_2Activity" android:label="@string/app_name2">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RealmReadActivity" />
+
     </application>
 
 </manifest>
